--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,10 @@ body {
 }
 body {
   margin: 0;
-  font: 19px / 23px Montserrat, "Montserrat", sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  font-size: 19px;
+  line-height: 23px;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
